# Bit-Nexustech

./: CMakeLists.txt  README.md
.bit/: file_state.txt  version.txt
.bit/1/: created.txt  lint.sh
.bit/1/include/: Bit.h
.bit/1/src/: Bit.cpp  interactive_terminal.cpp
.bit/2/: created.txt  erased.txt  modified.txt
.bit/2/src/: Bit.cpp  interactive_terminal.cpp
.bit/3/: created.txt
include/: interactive_terminal.h
src/: Bit.cpp  interactive_terminal.cpp  main.cpp
